changed IGN R3BEL to R3BEL007 //just for practice

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button id="MyButton">Lets start!</button>
         </section>
         <footer>
-            <p>copyrighted by Akxr alias R3BEL</p>
+            <p>copyrighted by Akxr alias R3BEL007</p>
         </footer>
         <script src = "script.js"></script>
     </body>   
