redisgned the website using css elements

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <header>Akshar</header>
         <nav>
-            <a href="#">home</a>
-            <a href="#">projects</a>
-            <a href="https://instagram.in/akshar_u_2077">join meh</a>
+            <a href="#">HOME</a>
+            <a href="#">PROJECTS</a>
+            <a href="https://instagram.in/akshar_u_2077">JOIN MEH</a>
         </nav>
         <section class="hero">
             <h1>Day 1 Of Learning Web Dev</h1>
